--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -9,6 +9,5 @@
     ]
   },
   "include": [
-    "src/**/*.ts"
-, "src/app/features/books/components/book-collection.componentts"  ]
+    "src/**/*.ts"]
 }
