--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/compiler-cli": "^21.0.1",
     "@types/jasmine": "~5.1.13",
     "baseline-browser-mapping": "^2.8.32",
+    "esbuild": "~0.19.12",
     "jasmine-core": "~5.12.1",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
