--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "21",
-    "@angular/common": "^21.0.1",
-    "@angular/compiler": "^21.0.1",
-    "@angular/core": "^21.0.1",
-    "@angular/forms": "^21.0.1",
+    "@angular/cdk": "^21.0.2",
+    "@angular/common": "^21.0.3",
+    "@angular/compiler": "^21.0.3",
+    "@angular/core": "^21.0.3",
+    "@angular/forms": "^21.0.3",
     "@angular/material": "21.0.1",
-    "@angular/platform-browser": "^21.0.1",
-    "@angular/router": "^21.0.1",
+    "@angular/platform-browser": "^21.0.3",
+    "@angular/router": "^21.0.3",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@ngrx/effects": "^20.1.0",
     "@ngrx/entity": "^20.1.0",
@@ -41,11 +41,11 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.1",
+    "@angular/build": "^21.0.2",
     "@angular/cli": "21.0.1",
-    "@angular/compiler-cli": "^21.0.1",
+    "@angular/compiler-cli": "^21.0.3",
     "@types/jasmine": "~5.1.13",
-    "baseline-browser-mapping": "^2.8.32",
+    "baseline-browser-mapping": "^2.9.2",
     "esbuild": "~0.19.12",
     "jasmine-core": "~5.12.1",
     "karma": "~6.4.4",
