env + facade state unsplash

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,7 @@
     "types": [],
     "paths": {
       "@shared/*": ["./src/app/shared/*"],
-      "@environments/*": ["./src/app/environments/*"],
+      "@environments/*": ["./src/environments/*"],
     }
   },
   "include": [
