--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/aria": "^21.0.2",
     "@angular/cdk": "^21.0.2",
     "@angular/common": "^21.0.3",
     "@angular/compiler": "^21.0.3",
